[package]
name = "issue-creator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bigdecimal = "0.4.1"
clap = { version = "4.4.5", features = ["derive"] }
fake = { version = "2.8", features = ["derive"] }
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1", features = ["full"] }
toml = "0.8.0"

